add now.json secrets variable, refactor

--- a/now.json
+++ b/now.json
@@ -61,6 +61,10 @@
       "ACCOUNTS_MICRO_ENDPOINT": "https://now-delayed-task.khaindk.now.sh/accounts",
       "INVENTORY_MICRO_ENDPOINT": "https://now-delayed-task.khaindk.now.sh/inventory",
       "PRODUCTS_MICRO_ENDPOINT": "https://now-delayed-task.khaindk.now.sh/products",
-      "REVIEWS_MICRO_ENDPOINT": "https://now-delayed-task.khaindk.now.sh/reviews"
+      "REVIEWS_MICRO_ENDPOINT": "https://now-delayed-task.khaindk.now.sh/reviews",
+      "SMTP_HOST": "@smtp-host",
+      "SMPT_PORT": "@smtp-port",
+      "EMAIL_AUTH_USER": "@email-auth-user",
+      "EMAIL_AUTH_PASS": "@email-auth-pass"
   }
 }
